--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="lead mb-5">Mahasiswa Polban Jurusan Teknik Komputer dan Informatika, prodi D4 Teknik Informatika.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#https://github.com/SalmaSyawalan"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/SalmaSyawalan"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
                     </div>
