--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="lead mb-5">Mahasiswa Polban Jurusan Teknik Komputer dan Informatika, prodi D4 Teknik Informatika.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/SalmaSyawalan"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
                     </div>
@@ -102,20 +102,20 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Politeknik Negeri Bandung</h3>
+                            <div class="subheading mb-3">Jurusan Teknik Komputer dan Informatika</div>
+                            <div>D4 Teknik Informatika</div>
+                            <p> </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020 - sekarang</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">SMA Negeri 2 Bandung</h3>
+                            //<div class="subheading mb-3">Technology Magnet Program</div>
+                            //<p>GPA: 3.56</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2017 - May 2006</span></div>
                     </div>
                 </div>
             </section>
