--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">SMA Negeri 2 Bandung</h3>
-                            //<div class="subheading mb-3">Technology Magnet Program</div>
-                            //<p>GPA: 3.56</p>
+                            <div class="subheading mb-3">Peminatan : MIPA</div>
+                            <p> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - May 2006</span></div>
                     </div>
