--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="subheading mb-3">Peminatan : MIPA</div>
                             <p> </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2017 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2017 - 2020</span></div>
                     </div>
                 </div>
             </section>
