--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Tentang</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Pendidikan</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Kemampuan Teknis</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Hobi</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
@@ -47,7 +47,7 @@
                         Cimahi, Jawa Barat ·
                         <a href="mailto:salma.syawalan.tif420@polban.ac.id">salma.syawalan.tif420@polban.ac.id</a>
                     </div>
-                    <p class="lead mb-5">Mahasiswa Polban Jurusan Teknik Komputer dan Informatika, prodi D4 Teknik Informatika.</p>
+                    <p class="lead mb-5">"See from another perspective."</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
