--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Tentang</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Pendidikan</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#loc">Lokasi</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Kemampuan Teknis</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Hobi</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Karya Gambar</a></li>
@@ -75,6 +76,21 @@
                             <p> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - 2020</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            
+            <!-- Education-->
+            <section class="resume-section" id="loc">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Lokasi</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Politeknik Negeri Bandung</h3>
+                            <iframe src="https://goo.gl/maps/Ctmr5ARjBVC6h68C8;" allowfullscreen></iframe>
+                            <p> </p>
+                        </div>
                     </div>
                 </div>
             </section>
