--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
             </section>
             <hr class="m-0" />
             
+            <iframe src="https://goo.gl/maps/Ctmr5ARjBVC6h68C8" height="200" width="300" title="Iframe Example"></iframe>
+            
             <!-- Education-->
             <section class="resume-section" id="loc">
                 <div class="resume-section-content">
@@ -88,7 +90,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Politeknik Negeri Bandung</h3>
-                            <iframe src="https://goo.gl/maps/Ctmr5ARjBVC6h68C8;" allowfullscreen></iframe>
+                            <iframe src="https://goo.gl/maps/Ctmr5ARjBVC6h68C8" height="400" width="500" title="Iframe Example"></iframe>
                             <p> </p>
                         </div>
                     </div>
