--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Politeknik Negeri Bandung</h3>
-                            <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.1534714348486!2d107.57158381477271!3d-6.87220739503394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e420abc30acf%3A0x10569255865460a5!2sBandung%20State%20Polytechnic!5e0!3m2!1sen!2sid!4v1617698630074!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>" height="400" width="500" title="Iframe Example"></iframe>
+                            <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.1534714348486!2d107.57158381477271!3d-6.87220739503394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e420abc30acf%3A0x10569255865460a5!2sBandung%20State%20Polytechnic!5e0!3m2!1sen!2sid!4v1617698630074!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                             <p> </p>
                         </div>
                     </div>
